# mfs-chol

./: .gitignore  CMakeLists.txt  README.md  build.sh  plot_matrix.py  run_fig_01_elas.sh  run_fig_01_helm.sh  run_fig_01_lapl.sh  run_fig_02_2K.sh  run_fig_02_4K.sh  run_fig_05.hip  run_fig_06.sh  run_fig_07_a.sh  run_fig_07_b.sh  run_fig_08.sh  run_fig_09.sh  run_fig_10.sh  run_fig_11.sh  run_fig_12.sh  run_fig_13.sh  run_fig_14.sh  run_fig_15.sh  run_fig_16.sh  run_some_extra.sh  run_tab_01.sh
dat/: instruction.txt  reorder_mesh_for_screening_effect.off
examples/: CMakeLists.txt  img2points.cc  profiling.cc  test_diffusion_curves.cc  test_diffusion_meshes.cc  test_direct_svd.cc  test_elasticity.cc  test_helmholtz_waves.cc  test_helmholtz_waves_neumann.cc  test_hpro3d.cc  test_poisson.cc  test_scalability.cc  test_uncertainty.cc
src/: CMakeLists.txt  cublas_wrapper.h  kernels.h  kl_chol.cu  kl_chol.h  maxmin.h  preprocess.h  traits.h
